fix: fix z-index order

--- a/components/card/card-horizontal.module.scss
+++ b/components/card/card-horizontal.module.scss
@@ -69,7 +69,7 @@
     top: 50%;
     transform: translate(-50%, -10%);
     opacity: 0;
-    z-index: 1;
+    z-index: $z-index-card-button;
     transition: all 0.4s;
     display: none;
   }
