--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 104px;
   background-color: $color-white;
-  z-index: 1;
+  z-index: $z-index-header;
 
   @media (max-width: $screen-tablet) {
     height: 84px;
